--- a/style.css
+++ b/style.css
@@ -310,7 +310,12 @@ body {
 }
 
 .colors {
+    transition: .3s;
     margin-top: 20px;
+}
+.colors:hover {
+    transition: .3s;
+    transform: scale(1.2);
 }
 
 #orange {
@@ -342,10 +347,17 @@ body {
     width: 100%;
 }
 .wireframes img {
+    transition: .3s;
+    opacity: .9;
     width: 95%;
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.45);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.45);
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.45);
+}
+
+.wireframes img:hover {
+    transition: .3s;
+    opacity: 1;
 }
 
 .bottom {
@@ -364,9 +376,16 @@ body {
     margin-top: -100px;
 }
 
+#projects img:hover {
+    transition: .3s;
+    opacity: 1;
+}
+
 #projects img {
+    transition: .3s;
     width: 95%;
     margin-bottom: 50px;
+    opacity: 0.9;
 }
 
 /* Contact */
