--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ body {
 #right-h1 {
     font-family: 'Exo', sans-serif;
     font-size: 45px;
-    margin-top: 200px;
+    margin-top: 100px;
     text-align: right;
     padding-right: 100px;
 }
@@ -242,7 +242,7 @@ body {
     color: rgb(230, 227, 227, 0.5);
     font-size: 150px;
     font-family: 'Hanuman', serif;
-    margin-top: 100px;
+    
     position: absolute;
     right: 150px;
 }
@@ -386,6 +386,19 @@ body {
     width: 95%;
     margin-bottom: 50px;
     opacity: 0.9;
+}
+
+.intern-row {
+    padding-top: 50px;
+    margin-left: 30px;
+}
+
+.intern-row img {
+    width: 100%;
+}
+
+.intern-design {
+    margin-top: 12px;
 }
 
 /* Contact */
